--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ body {
 }
 
 form {
-  width: 40%;
+  width: 30%;
+  height: 60%;
   background: white;
   padding: 20px;
-  max-width: 300px;
+
   margin: auto;
   border-radius: 8px;
   box-shadow: 0 0 10px #ccc;
@@ -29,7 +30,7 @@ button {
 div {
   height: 100vh;
   width: 100vw;
-  /* background-color: red; */
+  background-color: red;
   display: flex;
   align-items: center;
 }
