--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@ body {
   font-family: Arial, sans-serif;
   padding: 20px;
   background-color: #f0f0f0;
+  padding: 0;
+  margin: 0;
 }
 
 form {
-  width: 30%;
+  width: 35%;
   height: 40%;
   background: white;
   padding: 20px;
@@ -30,12 +32,24 @@ button {
 div {
   height: 100vh;
   width: 100vw;
-  background-color: red;
+  /* background-color: red; */
   display: flex;
   align-items: center;
 }
 
+@media screen and (max-width: 900px) {
+  form {
+    width: 45%;
+  }
+}
+
 @media screen and (max-width: 650px) {
+  form {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 400px) {
   form {
     width: 80%;
   }
